--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,6 +3,9 @@ body {
   text-align: center;
   height: 100%;
   background-color: black !important;
+  padding: 0px;
+  margin: 0px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 #app {
